src/sass/common/_bootstrap-slider.scss
.slider.slider-horizontal {
	width:97%!important;
	margin-bottom: 0px!important;

	.slider-track {
		height: 15px!important;
		box-shadow: none;
		border-radius: 0!important;
	}
	
	.tooltip.top {
		margin-top: rem(20);
		opacity: 1;
		z-index: 1;

		.tooltip-inner {
			color: $black_text;
			background: transparent;
		}

	}

	.slider-selection.tick-slider-selection {
		border-radius: 0;
		background: $btstr_slider_track_tick_bg;
	}

	.slider-track {
		&-high {
			background: $btstr_slider_track_not_tick_bg;
		}

		.slider-selection {
			box-shadow: none;
		}	
	}

	.slider-handle {
		top: 2px;

		height: 20px;
		width: 20px;

		border-radius: 0;

		background: $btstr_slider_nandle_block_bg;
	}
	.slider-tick-label-container {
		.slider-tick-label {
			position: absolute;
			top: -20px;
			font-size: 11px;
			color: $small-text;
			margin-left: -15px!important;
			text-align: left!important;

		}
		.slider-tick-label:first-child {
			margin-left: 0px!important;

		}
		.slider-tick-label:last-child {
			margin-left: -30px!important;
			
		}

	}
	

	.slider-tick-container {
		.slider-tick {

			width: 1px;
			margin-left: 0px!important;
			height: 15px;
			top: 5px;
			background: $btstr_slider_other_nandle_block_bg;
			border-radius: 0;
			box-shadow: none;
		}
	}


	@media only screen and (max-width:767px) {
		// .slider-tick-label {
		// 	width: 20px;

		// 	font-size: 10px;
		// }
	}
}
	.custom-annual-income {
		.slider.slider-horizontal {
		.slider-tick-label-container {
			.slider-tick-label:last-child {
				margin-left: -40px!important;
			}
		}
	}
	}

.slider-track {
	box-shadow: none;
}
@media only screen and (max-width:767px) {
	.slider.slider-horizontal {
		width: 92%!important;
		float: right;
		margin-right: rem(15)
	}
}
.bootstrap-slider-calc.has-error {
	.help-block {
		text-align: left;
		float: left;
	}
}

